# HomeLab.Observability

MonitoringStackLocal/: README.md  docker-compose.yml
MonitoringStackLocal/config/: grafana-datasources.yaml  grafana.ini  loki-config.yml  otel-collector-config.yml  prometheus.yml  tempo-config.yml
MonitoringStackLocal/samples/: main.py  pyproject.toml
MonitoringStackLocal/samples/csharp/: Program.cs
MonitoringStackLocal/samples/python/: main.py  pyproject.toml
